code/force-app/main/default/objects/Event_Notification__c/Event_Notification__c.object-meta.xml
<CustomObject>
    <label>Event Notification</label>
    <nameField>
        <label>Event</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>