code/force-app/main/default/objects/Event_Notification__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Notification</relationshipLabel>
    <relationshipName>Event_Notification</relationshipName>
    <type>Lookup</type>
</CustomField>