code/force-app/main/default/objects/Event_Notification__c/fields/Event_Notification_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Event_Notification_External_Key__c</fullName>
    <externalId>true</externalId>
    <label>Event Notification External Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>