code/force-app/main/default/objects/Event_Notification__c/fields/Private_Account_Info__c.field-meta.xml
<CustomField>
    <fullName>Private_Account_Info__c</fullName>
    <label>Private Customer Information</label>
    <referenceTo>Private_Customer_Information__c</referenceTo>
    <relationshipLabel>Event Notification</relationshipLabel>
    <relationshipName>Event_Notification</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>