code/force-app/main/default/objects/Event_Notification__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <length>100</length>
    <type>Text</type>
</CustomField>