code/force-app/main/default/objects/Event_Notification__c/listViews/Abnormal_Key_Indicators.listView-meta.xml
<ListView>
    <fullName>Abnormal_Key_Indicators</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>Remark__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>EWS Alert</value>
    </filters>
    <label>Abnormal Key Indicators</label>
</ListView>