code/force-app/main/default/objects/Event_Notification__c/listViews/Transaction_Reminder.listView-meta.xml
<ListView>
    <fullName>Transaction_Reminder</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>Remark__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>EWS Alert</value>
    </filters>
    <label>Transaction Reminder</label>
</ListView>